[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/TitleScreen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/chuchel.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/dynamic_fonts/opendyslexic_regular_16.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.278431, 0.278431, 0.278431, 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 25
outline_color = Color( 0.945098, 0.498039, 0.498039, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_top = 2.0
content_margin_bottom = 2.0

[sub_resource type="Animation" id=4]
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BG/GameName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/Credits:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG/MainOptions:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Credits:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MainOptions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BG/Credits:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, -0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1280, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sfx_creditos" ],
"method": "_play_sfx"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BG/GameName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MainOptions:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Credits:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MainOptions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 180 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BG/Credits:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sfx_creditos" ],
"method": "_play_sfx"
} ]
}

[node name="MainMenu" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 160.218 ]
}
first_level = "res://src/Levels/World.tscn"

[node name="BG" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="VBoxContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -298.0
custom_constants/separation = -2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="BG/GameName"]
margin_top = 51.0
margin_right = 1280.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.929412, 0.537255, 1 )
text = "GGJ 2021"
align = 1

[node name="MainOptions" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.00012207
custom_constants/margin_right = 16
custom_constants/margin_top = 128
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxMain" type="VBoxContainer" parent="BG/MainOptions"]
margin_left = 1017.0
margin_top = 128.0
margin_right = 1264.0
margin_bottom = 531.0
size_flags_horizontal = 8
size_flags_vertical = 3
alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="BG/MainOptions/VBoxMain"]
margin_top = 109.0
margin_right = 247.0
margin_bottom = 293.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="NewGame" parent="BG/MainOptions/VBoxMain/ButtonsContainer" groups=[
"FocusGroup",
"MainMenu",
] instance=ExtResource( 3 )]
margin_right = 247.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../Exit")
focus_previous = NodePath("../Exit")
text = "nuevo juego"
focus_animation = "none"

[node name="Options" parent="BG/MainOptions/VBoxMain/ButtonsContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 1060.0
margin_top = 58.0
margin_right = 1248.0
margin_bottom = 114.0
text = "Opciones"
focus_animation = "none"

[node name="CreditsBtn" parent="BG/MainOptions/VBoxMain/ButtonsContainer" instance=ExtResource( 3 )]
margin_left = 37.0
margin_top = 64.0
margin_right = 209.0
margin_bottom = 120.0
text = "créditos"
focus_animation = "none"

[node name="Exit" parent="BG/MainOptions/VBoxMain/ButtonsContainer" instance=ExtResource( 3 )]
margin_left = 71.0
margin_top = 128.0
margin_right = 176.0
margin_bottom = 184.0
focus_neighbour_bottom = NodePath("../NewGame")
focus_next = NodePath("../NewGame")
text = "salir"
focus_animation = "none"

[node name="Credits" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1280.0
margin_right = -1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="BG/Credits"]
margin_right = 1280.0
margin_bottom = 548.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )

[node name="MarginContainer" type="MarginContainer" parent="BG/Credits"]
margin_right = 1280.0
margin_bottom = 548.0
custom_constants/margin_right = 32

[node name="CreditsContainer" type="VBoxContainer" parent="BG/Credits/MarginContainer"]
margin_right = 1248.0
margin_bottom = 548.0
custom_constants/separation = 24
alignment = 1

[node name="Devs" type="Label" parent="BG/Credits/MarginContainer/CreditsContainer"]
margin_left = 741.0
margin_top = 16.0
margin_right = 1248.0
margin_bottom = 451.0
size_flags_horizontal = 8
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.54902, 0.572549, 1 )
text = "Itzel \"Noisy Panda\" González Estrada
Efectos de sonido y narrativa | Sound effects and narrative

Valeria \"Cadstor\"
Entornos | Environments

Sebastián \"Tatán\"
Personajes y GUI | Characters and GUI

Juan \"Quiet Gecko\" Carlos García Ángel
Música y programación | Music and programming

Mateo \"Carenalga\" Robayo Rodríguez
Programación | Programming"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="BG/Credits/MarginContainer/CreditsContainer" instance=ExtResource( 3 )]
margin_left = 1135.0
margin_top = 475.0
margin_right = 1248.0
margin_bottom = 531.0
size_flags_horizontal = 8
text = "back"
focus_animation = "none"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 4 )
anims/credits_exit = SubResource( 5 )
anims/go_to_world = SubResource( 6 )
anims/show_credits = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
